dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd
  name: argocd-service
spec:
  type: ClusterIP
  selector:
    app: argocd
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
