dev/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8888
